--- a/backgammon.html
+++ b/backgammon.html
@@ -70,7 +70,7 @@
             </div>
             <div class="game-info">
                 <p>ターン: <span id="current-turn"></span></p>
-                <p>赤(あなた) バー:<span id="bar-red-score">0</span> / ゴール:<span id="borne-off-red-score">0</span></p>
+                <p>赤(YOU) バー:<span id="bar-red-score">0</span> / ゴール:<span id="borne-off-red-score">0</span></p>
                 <p>黒(CPU) バー:<span id="bar-black-score">0</span> / ゴール:<span id="borne-off-black-score">0</span></p>
             </div>
             <div class="turn-controls">
