--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ナンプレ無限</title>
+    <title>高機能・無限数独</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ナンプレ無限</h1>
+    <h1>高機能・無限数独</h1>
     <div id="sudoku-container">
         <div id="sudoku-grid"></div>
     </div>
