--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>高機能・無限数独</h1>
+    <h1>無限数独</h1>
     <div id="sudoku-container">
         <div id="sudoku-grid"></div>
     </div>
