--- a/backgammon.html
+++ b/backgammon.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <h1>JavaScript バックギャモン</h1>
+    <h1>JavaScript バックギャモン ver 2.0</h1>
     <div class="container">
         <div class="sidebar">
             <div class="game-setup">
