--- a/checker.html
+++ b/checker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript チェッカー (最終強化版)</title>
+    <title>JavaScript チェッカー ver2.0</title>
     <style>
         body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f0f0f0; margin: 0; padding: 20px; }
         h1 { color: #333; text-align: center; margin-bottom: 20px;}
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>JavaScript チェッカー</h1>
+    <h1>JavaScript チェッカー ver2.0</h1>
     <div class="container">
         <div class="sidebar">
             <div class="controls">
