--- a/connect4.html
+++ b/connect4.html
@@ -57,8 +57,8 @@
             <div class="controls">
                 <label for="cpu-level">CPUレベル:</label>
                 <select id="cpu-level">
-                    <option value="1">レベル1 (入門)</option><option value="2">レベル2 (初級)</option>
-                    <option value="3">レベル3 (中級)</option><option value="4" selected>レベル4 (上級)</option>
+                    <option value="1">レベル1 (入門)</option><option value="2" selected>レベル2 (初級)</option>
+                    <option value="3">レベル3 (中級)</option><option value="4">レベル4 (上級)</option>
                     <option value="5">レベル5 (達人)</option>
                 </select>
                 <button id="start-button">ゲーム開始 / リセット</button>
