--- a/samegame/index.html
+++ b/samegame/index.html
@@ -2,23 +2,21 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>さめがめ Deluxe</title>
+    <title>さめが〜め</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>さめがめ Deluxe</h1>
+    <h1>さめが〜め</h1>
     
     <div class="controls">
         <div class="control-group">
             <span>サイズ:</span>
             <div id="size-selector"></div>
         </div>
-        <!-- ▼▼▼ ここから追加 ▼▼▼ -->
         <div class="control-group">
             <span>色数:</span>
             <div id="color-selector"></div>
         </div>
-        <!-- ▲▲▲ ここまで追加 ▲▲▲ -->
         <button id="reset-button">リセット</button>
     </div>
 
@@ -32,7 +30,9 @@
     </div>
 
     <div id="game-container">
-        <div id="game-board"></div>
+        <div id="game-board">
+            <!-- ブロックがここに挿入されます -->
+        </div>
     </div>
 
     <script src="script.js"></script>
