--- a/samegame/index.html
+++ b/samegame/index.html
@@ -2,11 +2,14 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>さめが〜め</title>
+    <title>さめがめ Deluxe</title>
     <link rel="stylesheet" href="style.css">
+    <!-- ▼▼▼ ここから追加 ▼▼▼ -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <!-- ▲▲▲ ここまで追加 ▲▲▲ -->
 </head>
 <body>
-    <h1>さめが〜め</h1>
+    <h1>さめがめ Deluxe</h1>
     
     <div class="controls">
         <div class="control-group">
@@ -34,6 +37,10 @@
             <!-- ブロックがここに挿入されます -->
         </div>
     </div>
+    
+    <!-- ▼▼▼ ここから追加 ▼▼▼ -->
+    <canvas id="fireworks-canvas"></canvas>
+    <!-- ▲▲▲ ここまで追加 ▲▲▲ -->
 
     <script src="script.js"></script>
 </body>
