--- a/samegame/index.html
+++ b/samegame/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>さめがめ Deluxe</title>
     <link rel="stylesheet" href="style.css">
-    <!-- ▼▼▼ ここから追加 ▼▼▼ -->
+    <!-- canvas-confetti ライブラリを読み込み -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <!-- ▲▲▲ ここまで追加 ▲▲▲ -->
 </head>
 <body>
     <h1>さめがめ Deluxe</h1>
@@ -38,9 +37,8 @@
         </div>
     </div>
     
-    <!-- ▼▼▼ ここから追加 ▼▼▼ -->
+    <!-- 花火を描画するためのCanvas -->
     <canvas id="fireworks-canvas"></canvas>
-    <!-- ▲▲▲ ここまで追加 ▲▲▲ -->
 
     <script src="script.js"></script>
 </body>
