--- a/samegame/index.html
+++ b/samegame/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>さめがめ Deluxe</title>
+    <title>さめが〜め</title>
     <link rel="stylesheet" href="style.css">
     <!-- canvas-confetti ライブラリを読み込み -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-    <h1>さめがめ Deluxe</h1>
+    <h1>さめが〜め</h1>
     
     <div class="controls">
         <div class="control-group">
