--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="game-grid">
         <!-- カード1: バックギャモン -->
         <a href="https://core-calmdust.github.io/aicoding/backgammon.html" class="game-card">
-            <img src="/images/reversi.png" alt="バックギャモンの画像">
+            <img src="./images/reversi.png" alt="バックギャモンの画像">
             <div class="card-content">
                 <h2>バックギャモン</h2>
             </div>
@@ -26,7 +26,7 @@
 
         <!-- カード2: チェッカー -->
         <a href="https://core-calmdust.github.io/aicoding/checker.html" class="game-card">
-            <img src="/images/backgammon.png" alt="チェッカーの画像">
+            <img src="./images/backgammon.png" alt="チェッカーの画像">
             <div class="card-content">
                 <h2>チェッカー</h2>
             </div>
@@ -34,7 +34,7 @@
 
         <!-- カード3: コネクテッド4 -->
         <a href="https://core-calmdust.github.io/aicoding/connect4.html" class="game-card">
-            <img src="/images/connect4.png" alt="コネクテッド4の画像">
+            <img src="./images/connect4.png" alt="コネクテッド4の画像">
             <div class="card-content">
                 <h2>コネクテッド4</h2>
             </div>
@@ -42,7 +42,7 @@
 
         <!-- カード4: リバーシ -->
         <a href="https://core-calmdust.github.io/aicoding/reversi_v2.html" class="game-card">
-            <img src="/images/samegame.png" alt="リバーシの画像">
+            <img src="./images/samegame.png" alt="リバーシの画像">
             <div class="card-content">
                 <h2>リバーシ</h2>
             </div>
@@ -50,7 +50,7 @@
 
         <!-- カード5: さめが〜め -->
         <a href="https://core-calmdust.github.io/aicoding/samegame/" class="game-card">
-            <img src="/images/sudoku.png" alt="さめが〜めの画像">
+            <img src="./images/sudoku.png" alt="さめが〜めの画像">
             <div class="card-content">
                 <h2>さめが〜め</h2>
             </div>
@@ -58,7 +58,7 @@
 
         <!-- カード6: 無限数独 -->
         <a href="https://core-calmdust.github.io/aicoding/sudoku/" class="game-card">
-            <img src="/images/checker.png" alt="無限数独の画像">
+            <img src="./images/checker.png" alt="無限数独の画像">
             <div class="card-content">
                 <h2>無限数独</h2>
             </div>
