--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ゲームで遊ぼう！</title>
+    <title>ゲーム制作＠バイブコーディング</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,19 +16,19 @@
     </header>
 
     <main class="game-grid">
-        <!-- カード1: バックギャモン -->
-        <a href="https://core-calmdust.github.io/aicoding/backgammon.html" class="game-card">
-            <img src="./images/reversi.png" alt="バックギャモンの画像">
+        <!-- カード1: リバーシ -->
+        <a href="https://core-calmdust.github.io/aicoding/reversi_v2.html" class="game-card">
+            <img src="./images/reversi.png" alt="リバーシ">
             <div class="card-content">
-                <h2>バックギャモン</h2>
+                <h2>リバーシ</h2>
             </div>
         </a>
 
-        <!-- カード2: チェッカー -->
-        <a href="https://core-calmdust.github.io/aicoding/checker.html" class="game-card">
-            <img src="./images/backgammon.png" alt="チェッカーの画像">
+        <!-- カード2: バックギャモン -->
+        <a href="https://core-calmdust.github.io/aicoding/backgammon.html" class="game-card">
+            <img src="./images/backgammon.png" alt="バックギャモン">
             <div class="card-content">
-                <h2>チェッカー</h2>
+                <h2>バックギャモン</h2>
             </div>
         </a>
 
@@ -40,27 +40,27 @@
             </div>
         </a>
 
-        <!-- カード4: リバーシ -->
-        <a href="https://core-calmdust.github.io/aicoding/reversi_v2.html" class="game-card">
-            <img src="./images/samegame.png" alt="リバーシの画像">
-            <div class="card-content">
-                <h2>リバーシ</h2>
-            </div>
-        </a>
-
-        <!-- カード5: さめが〜め -->
+        <!-- カード4: さめが〜め -->
         <a href="https://core-calmdust.github.io/aicoding/samegame/" class="game-card">
-            <img src="./images/sudoku.png" alt="さめが〜めの画像">
+            <img src="./images/samegame.png" alt="さめが〜め">
             <div class="card-content">
                 <h2>さめが〜め</h2>
             </div>
         </a>
 
-        <!-- カード6: 無限数独 -->
+        <!-- カード5: 無限数独 -->
         <a href="https://core-calmdust.github.io/aicoding/sudoku/" class="game-card">
-            <img src="./images/checker.png" alt="無限数独の画像">
+            <img src="./images/sudoku.png" alt="無限数独">
             <div class="card-content">
                 <h2>無限数独</h2>
+            </div>
+        </a>
+
+        <!-- カード6: チェッカー -->
+        <a href="https://core-calmdust.github.io/aicoding/checker.html" class="game-card">
+            <img src="./images/checker.png" alt="チェッカー">
+            <div class="card-content">
+                <h2>チェッカー</h2>
             </div>
         </a>
     </main>
