--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
             </div>
         </a>
     </main>
-
+    <a href="https://github.com/core-calmdust/aicoding/blob/main/index.html">おソース</a>
 </body>
 </html>
