--- a/backgammon.html
+++ b/backgammon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript バックギャモン (最終修正版)</title>
+    <title>バックギャモン (最終修正版)</title>
     <style>
         :root { --checker-size: 36px; --point-width: 45px; --point-height: 190px; }
         body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #263238; color: white; margin: 0; padding: 20px; }
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <h1>JavaScript バックギャモン ver2.0</h1>
+    <h1>バックギャモン ver2.0</h1>
     <div class="container">
         <div class="sidebar">
             <div class="game-setup">
