--- a/index.html
+++ b/index.html
@@ -64,5 +64,17 @@
             </div>
         </a>
     </main>
+
+    <!-- ... </main> の後に追加 ... -->
+    </main>
+
+    <footer>
+        <p>
+            <a href="https://github.com/core-calmdust/aicoding" target="_blank" rel="noopener noreferrer">開発者ページ</a>
+        </p>
+    </footer>
+
+</body>
+</html>
 </body>
 </html>
