--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                 <h2>チェッカー</h2>
             </div>
         </a>
+
+        <!-- カード7: CYBER PONG XTREME+ -->
+        <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
+            <img src="./images/pong.png" alt="CYBER PONG XTREME+">
+            <div class="card-content">
+                <h2>CYBER PONG XTREME+</h2>
+            </div>
+        </a>
     </main>
 
     <!-- ... </main> の後に追加 ... -->
