--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
                 <h2>CYBER PONG XTREME+</h2>
             </div>
         </a>
-    </main>
 
-    <!-- ... </main> の後に追加 ... -->
+        <!-- カード8: DANMAKU INVADER XTREME+ -->
+        <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
+            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+">
+            <div class="card-content">
+                <h2>DANMAKU INVADER XTREME+</h2>
+            </div>
+        </a>
+        
     </main>
 
     <footer>
@@ -82,7 +88,5 @@
         </p>
     </footer>
 
-</body>
-</html>
 </body>
 </html>
