--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>リバーシ v3</title>
+    <title>リバーシ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -69,7 +69,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
+            /* ★修正点: メッセージエリアを外に出したためgapは不要に */
         }
 
         #board {
@@ -284,7 +284,6 @@
             color: var(--danger-color);
             height: 25px;
             text-align: center;
-            width: 100%;
         }
 
         .test-cpu-selectors {
@@ -366,9 +365,11 @@
             </div>
             <div class="game-area">
                 <div id="board"></div>
-                <div id="message-area"></div>
             </div>
         </div>
+        
+        <!-- ★修正点: メッセージエリアをコンテナの外に移動 -->
+        <div id="message-area"></div>
 
         <div class="kifu-controls">
             <h3>棋譜再生</h3>
