--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -69,7 +69,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            /* ★修正点: メッセージエリアを外に出したためgapは不要に */
         }
 
         #board {
@@ -284,6 +283,7 @@
             color: var(--danger-color);
             height: 25px;
             text-align: center;
+            margin-top: 20px;
         }
 
         .test-cpu-selectors {
@@ -368,11 +368,10 @@
             </div>
         </div>
         
-        <!-- ★修正点: メッセージエリアをコンテナの外に移動 -->
         <div id="message-area"></div>
 
         <div class="kifu-controls">
-            <h3>棋譜再生</h3>
+            <h3>棋譜再生（左右キーで手順の前後）</h3>
             <div class="kifu-buttons">
                 <button id="kifu-start" disabled>« 最初へ</button>
                 <button id="kifu-prev" disabled>‹ 前へ</button>
@@ -612,8 +611,6 @@
 
     /**
      * プレイヤーがセルをクリックしたときの処理
-     * @param {number} r - クリックされた行
-     * @param {number} c - クリックされた列
      */
     function handleCellClick(r, c) {
         if (isGameOver || isCpuVsCpuMode || isPlaybackMode || currentPlayer !== playerColor || board[r][c] !== EMPTY) {
@@ -631,7 +628,6 @@
 
     /**
      * 棋譜再生用の盤面をレンダリングする
-     * @param {number} index - 表示する棋譜のインデックス
      */
     function renderPlayback(index) {
         isPlaybackMode = true;
@@ -652,7 +648,23 @@
     kifuPrevBtn.addEventListener('click', () => { if (playbackIndex > 0) { playbackIndex--; renderPlayback(playbackIndex); } });
     kifuNextBtn.addEventListener('click', () => { if (playbackIndex < gameHistory.length - 1) { playbackIndex++; renderPlayback(playbackIndex); } });
     kifuEndBtn.addEventListener('click', () => { playbackIndex = gameHistory.length - 1; renderPlayback(playbackIndex); });
+    
+    document.addEventListener('keydown', (event) => {
+        const kifuActive = isGameOver || isPlaybackMode;
+        if (!kifuActive) return;
 
+        if (event.key === 'ArrowLeft') {
+            if (playbackIndex > 0) {
+                playbackIndex--;
+                renderPlayback(playbackIndex);
+            }
+        } else if (event.key === 'ArrowRight') {
+            if (playbackIndex < gameHistory.length - 1) {
+                playbackIndex++;
+                renderPlayback(playbackIndex);
+            }
+        }
+    });
 
     // ================================================================= //
     //                         AI思考ロジック (コア)                      //
