--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -44,7 +44,7 @@
         .game-wrapper {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            align-items: center; /* ★子要素を中央揃えにする */
             width: 100%;
             max-width: 850px;
         }
@@ -142,6 +142,17 @@
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             width: 100%;
+        }
+        
+        /* ★修正点: 個別のマージンで隙間を制御 */
+        #message-area {
+            margin-top: 20px;
+        }
+        .kifu-controls {
+            margin-top: 20px;
+        }
+        .test-controls {
+            margin-top: 20px;
         }
         
         .controls label,
@@ -283,7 +294,6 @@
             color: var(--danger-color);
             height: 25px;
             text-align: center;
-            margin-top: 20px;
         }
 
         .test-cpu-selectors {
@@ -371,7 +381,7 @@
         <div id="message-area"></div>
 
         <div class="kifu-controls">
-            <h3>棋譜再生（左右キーで手順の前後）</h3>
+            <h3>棋譜再生（左右キーで棋譜を前後出来ます）</h3>
             <div class="kifu-buttons">
                 <button id="kifu-start" disabled>« 最初へ</button>
                 <button id="kifu-prev" disabled>‹ 前へ</button>
