--- a/index.html
+++ b/index.html
@@ -16,9 +16,25 @@
     </header>
 
     <main class="game-grid">
+        <!-- カード7: CYBER PONG XTREME+ -->
+        <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
+            <img src="./images/pong.png" alt="CYBER PONG XTREME+">
+            <div class="card-content">
+                <h2>CYBER PONG XTREME+</h2>
+            </div>
+        </a>
+
+        <!-- カード8: DANMAKU INVADER XTREME+ -->
+        <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
+            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+">
+            <div class="card-content">
+                <h2>DANMAKU INVADER XTREME+</h2>
+            </div>
+        </a>
+        
         <!-- カード1: リバーシ -->
-        <a href="https://core-calmdust.github.io/aicoding/reversi_v2.html" class="game-card">
-            <img src="./images/reversi.png" alt="リバーシ">
+        <a href="https://core-calmdust.github.io/aicoding/reversi_v3.html" class="game-card">
+            <img src="./images/reversi_v3.png" alt="リバーシ">
             <div class="card-content">
                 <h2>リバーシ</h2>
             </div>
@@ -61,22 +77,6 @@
             <img src="./images/checker.png" alt="チェッカー">
             <div class="card-content">
                 <h2>チェッカー</h2>
-            </div>
-        </a>
-
-        <!-- カード7: CYBER PONG XTREME+ -->
-        <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
-            <img src="./images/pong.png" alt="CYBER PONG XTREME+">
-            <div class="card-content">
-                <h2>CYBER PONG XTREME+</h2>
-            </div>
-        </a>
-
-        <!-- カード8: DANMAKU INVADER XTREME+ -->
-        <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
-            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+">
-            <div class="card-content">
-                <h2>DANMAKU INVADER XTREME+</h2>
             </div>
         </a>
         
